--- a/css/bazaarvoiceUniversal.css
+++ b/css/bazaarvoiceUniversal.css
@@ -128,6 +128,11 @@ h1._BVPageHeaderText, h2._BVSectionHeaderText {margin: 10px 0;}
 .BVSection {border-bottom: 1px solid #eee; padding-bottom: 20px; margin-bottom: 30px;}
 .BVSectionHeader {margin-bottom: 15px;}
 
+/* Error Container */
+.BVSectionErrorContainer {color: #F00;}
+.BVErrorText {color: #F00 !important;}
+.BVErrorBorder {border: 1px solid #F00 !important;}
+
 /* Fields */
 .BVField {clear: left; overflow: hidden; margin-bottom: 10px;}
 	.BVFormInputText, .BVFormInputTextarea {padding: 7px 8px; outline: none; color: #333; background-color: #fff; background-repeat: no-repeat; background-position: right center; border: 1px solid #ccc; border-radius: 3px; box-shadow: inset 0 1px 2px rgba(0,0,0,0.075); -moz-box-sizing: border-box; box-sizing: border-box; transition: all 0.15s ease-in; -webkit-transition: all 0.15s ease-in 0; vertical-align: middle;}
