--- a/views/universal/feedback/submissionFormFeedback.html
+++ b/views/universal/feedback/submissionFormFeedback.html
@@ -1,4 +1,4 @@
-<form id="" name="" action="" method="" data-validate="parsley">
+<form id="" name="" action="" method="" data-validate="parsley" class="_BVReportInappropriateForm">
 	<div class="BVSectionHeader _BVSectionHeaderReportInappropriateContainer"></div>
 	<div class="BVField _BVReportInappropriateTextInputContainer"></div>
 	<div class="BVFooter">
