--- a/css/bazaarvoiceUniversal.css
+++ b/css/bazaarvoiceUniversal.css
@@ -139,6 +139,8 @@ h1._BVPageHeaderText, h2._BVSectionHeaderText {margin: 10px 0;}
 	.BVFormInputText:focus, .BVFormInputTextarea:focus {border-color: #51a7e8; box-shadow: inset 0 1px 2px rgba(0,0,0,0.075),0 0 5px rgba(81,167,232,0.5);}
 	.BVFormInputText {width: 380px;}
 	.BVFormInputTextarea {width: 381px; height: 125px;}
+	._BVCharacterCounter {display: inline;}
+	._BVCharacterCounterText {display: inline-block;}
 	._BVRadioButtonGroupContainer {float: left;}
 
 /* Rating Stars */
