--- a/views/reviews/display/reviewContainer.html
+++ b/views/reviews/display/reviewContainer.html
@@ -4,6 +4,7 @@
 		<div class="_BVTitleContainer"></div>
 		<div class="_BVDateContainer"></div>
 	</div>
+	<div class="_BVBadgesContainer"></div>
 	<div class="BVUserDataContainer">
 		<div class="BVAvatar">
 			<img src="images/noAvatar.gif" width="46" height="44" alt="" border="0" />
