updated error container variable

--- a/views/reviews/submission/submissionFormReviewContainer.html
+++ b/views/reviews/submission/submissionFormReviewContainer.html
@@ -2,7 +2,10 @@
 	<div class="_BVPageHeaderContainer"></div>
 	<div class="BVPageBody">
 		<div class="BVSection BVSectionProductContainer"></div>
-		<div class="BVSection BVSectionErrorContainer"></div>
+		<div class="BVSection BVSectionErrorContainer">
+			<div class="BVSectionHeader _BVSectionHeaderErrorsContainer"></div>
+			<div class="_BVFormErrorsContainer"></div>
+		</div>
 		<div class="BVSection BVSectionRatingsContainer">
 			<div class="BVSectionHeader _BVSectionHeaderRatingsContainer"></div>
 			<div class="BVField BVFieldRating _BVOverallRatingInputContainer"></div>
