adding comments dispay and submission
also broke out submission controller files

--- a/views/reviews/display/reviewCommentContainer.html
+++ b/views/reviews/display/reviewCommentContainer.html
@@ -1,6 +1,5 @@
-<article id="" class="_BVReviewContainer">
+<article id="" class="_BVReviewCommentContainer">
 	<div class="BVUGCHeader">
-		<div class="_BVOverallRatingContainer"></div>
 		<div class="_BVTitleContainer"></div>
 		<div class="_BVDateContainer"></div>
 	</div>
@@ -16,7 +15,6 @@
 		</div>
 	</div>
 	<div class="BVUGCSecondaryContent">
-		<div class="_BVSecondaryRatingsContainer"></div>
 		<div class="BVUGCMediaContent">
 			<div class="_BVPhotoGroupContainer"></div>
 			<div class="_BVVideoGroupContainer"></div>
@@ -24,17 +22,7 @@
 	</div>
 	<div class="BVUGCPrimaryContent">
 		<div class="_BVBodyTextContainer"></div>
-		<div class="_BVTagGroupContainer"></div>
-		<div class="_BVAdditionalFieldGroupContainer"></div>
 		<div class="_BVRecommendedContainer"></div>
 	</div>
 	<div class="_BVFeedbackContainer"></div>
-	<div class="BVUGCCommentContent">
-		<div class="_BVButtonToggleReviewCommentsContainer"></div>
-		<div class="_BVButtonWriteReviewCommentContainer"></div>
-		<div class="_BVReviewCommentSectionContainer">
-			<div class="BVSectionHeader _BVSectionHeaderReviewCommentsContainer"></div>
-			<div class="_BVReviewCommentBodyContainer"></div>
-		</div>
-	</div>
 </article>
