adding filters and sorting to display
also a little bit of cleanup

--- a/views/universal/quicktake/quickTakeContainer.html
+++ b/views/universal/quicktake/quickTakeContainer.html
@@ -2,4 +2,8 @@
 	<div class="_BVOverallRatingContainer"></div>
 	<div class="_BVRecommendedContainerAverage"></div>
 	<div class="_BVButtonWriteReviewContainer"></div>
+	<div class="_BVFiltersContainer"></div>
+	<div class="BVSortContainer">
+		<div class="_BVSortInputWrapper"></div>
+	</div>
 </div>
