added youtube field to submission form

--- a/views/reviews/submission/submissionFormReviewContainer.html
+++ b/views/reviews/submission/submissionFormReviewContainer.html
@@ -22,6 +22,7 @@
 			<div class="BVSectionHeader _BVSectionHeaderMediaContainer"></div>
 			<div class="BVField _BVPhotoUploadInputContainer"></div>
 			<div class="BVField _BVVideoUploadInputContainer"></div>
+			<div class="BVField _BVVideoCaptionInputContainer"></div>
 		</div>
 		<div class="BVSection BVSectionUserContainer">
 			<div class="BVSectionHeader _BVSectionHeaderUserContainer"></div>
