added template for thank you page

--- a/views/reviews/submission/submissionFormReviewContainer.html
+++ b/views/reviews/submission/submissionFormReviewContainer.html
@@ -40,7 +40,7 @@
 		<div class="BVField _BVEmailAlertWhenCommentedContainer"></div>
 	</div>
 </form>
-<div id="BVPreviewContainer">
+<div class="BVPreviewContainer">
 	<div class="_BVReviewPreviewBodyContainer _BVReviewBodyContainer"></div>
 </div>
 <div class="BVField BVFieldGroup BVFieldButtonGroup">
@@ -49,4 +49,4 @@
 	<div class="BVField _BVButtonEditContainer"></div>
 	<div class="BVField _BVButtonCancelContainer"></div>
 </div>
-<div id="BVThankYouContainer"></div>
+<div class="BVThankYouContainer"></div>
