adding filter labels and counts

--- a/views/universal/filters/filterIndividualContainer.html
+++ b/views/universal/filters/filterIndividualContainer.html
@@ -1,5 +1,8 @@
 <div class="BVFilter">
 	<span class="BVPrefix BVFilterTextPrefix"></span>
 	<span class="BVValue _BVFilterText"></span>
+	<span class="BVValue BVFilterCountTextPrefix">(</span>
+	<span class="BVValue _BVFilterCountText"></span>
+	<span class="BVValue BVFilterCountTextSuffix">)</span>
 	<span class="BVSuffix BVFilterTextSuffix"></span>
 </div>
