Initial display styling

--- a/views/reviews/display/reviewContainer.html
+++ b/views/reviews/display/reviewContainer.html
@@ -1,18 +1,19 @@
 <article id="" class="_BVReviewContainer">
+	<div class="BVUGCSpacerTop"></div>
 	<div class="BVUGCHeader">
-		<div class="_BVOverallRatingContainer"></div>
 		<div class="_BVTitleContainer"></div>
-		<div class="_BVDateContainer"></div>
+		<div class="_BVOverallRatingContainer"></div>
 	</div>
-	<div class="_BVBadgesContainer"></div>
 	<div class="BVUserDataContainer">
 		<div class="BVAvatar">
-			<img src="images/noAvatar.gif" width="46" height="44" alt="" border="0" />
+			<img src="images/noAvatar.gif" width="40" height="41" alt="" border="0" />
 		</div>
 		<div class="BVUserInfo">
 			<div class="_BVUserNicknameContainer"></div>
-			<div class="_BVUserLocationContainer"></div>			
+			<div class="_BVUserLocationContainer"></div>
+			<div class="_BVDateContainer"></div>
 			<div class="_BVContextDataValueGroupContainer"></div>
+			<div class="_BVBadgesContainer"></div>
 		</div>
 	</div>
 	<div class="BVUGCSecondaryContent">
