--- a/views/universal/filters/filterIndividualContainer.html
+++ b/views/universal/filters/filterIndividualContainer.html
@@ -2,7 +2,5 @@
 	<span class="BVPrefix BVFilterTextPrefix"></span>
 	<span class="BVValue _BVFilterText"></span>
 	<span class="BVSuffix BVFilterTextSuffix"></span>
-	<span class="BVFilterCountTextPrefix">(</span>
-	<span class="BVCount _BVFilterCountText"></span>
-	<span class="BVFilterCountTextSuffix">)</span>
+	<span class="BVFilterCountTextPrefix">(</span><span class="BVCount _BVFilterCountText"></span><span class="BVFilterCountTextSuffix">)</span>
 </div>
