--- a/views/universal/quicktake/quickTakeContainer.html
+++ b/views/universal/quicktake/quickTakeContainer.html
@@ -1,8 +1,11 @@
 <div class="_BVQuickTakeSummary">
 	<div class="_BVOverallRatingContainer"></div>
 	<div class="_BVRecommendedContainerAverage"></div>
+    <div class="_BVFilters">
+        <div class="_BVFiltersTitle">Filter Reviews By:</div>
+        <div class="_BVFiltersContainer"></div>
+    </div>
 	<div class="_BVButtonWriteReviewContainer"></div>
-	<div class="_BVFiltersContainer"></div>
 	<div class="BVSortContainer">
 		<div class="_BVSortInputWrapper"></div>
 	</div>
