--- a/views/universal/feedback/feedbackVotingContainer.html
+++ b/views/universal/feedback/feedbackVotingContainer.html
@@ -1,3 +1,3 @@
-<div class="BVFeedbackVotingPrefix">Was this helpful?</div>
+<div class="BVFeedbackVotingPrefix">Was this review helpful?</div>
 <div class="_BVFeedbackPositiveButton"></div>
 <div class="_BVFeedbackNegativeButton"></div>
