separating badges between user and content

--- a/views/reviews/display/reviewContainer.html
+++ b/views/reviews/display/reviewContainer.html
@@ -1,10 +1,11 @@
 <article id="" class="_BVReviewContainer">
+	<div class="_BVBadgesContentContainer"></div>
 	<div class="BVUGCHeader">
 		<div class="_BVOverallRatingContainer"></div>
 		<div class="_BVTitleContainer"></div>
 		<div class="_BVDateContainer"></div>
 	</div>
-	<div class="_BVBadgesContainer"></div>
+	<div class="_BVBadgesUserContainer"></div>
 	<div class="BVUserDataContainer">
 		<div class="BVAvatar">
 			<img src="images/noAvatar.gif" width="46" height="44" alt="" border="0" />
