--- a/css/bazaarvoiceUniversal.css
+++ b/css/bazaarvoiceUniversal.css
@@ -54,12 +54,10 @@ behavior: url(includes/PIE-1.0.0/PIE.htc);
 		._BVButtonWriteReviewContainer a._BVButton ._BVButtonText {color: #fff; text-shadow: 0 -1px 1px rgba(0,0,0,0.75);}
 
 /* Ratings */
-._BVReviewContainer ._BVRatingStarsFilledImage, ._BVReviewContainer ._BVRatingStarsUnfilledImage {width: 115px !important;}
 .BVSecondaryRatingContainer {width: 195px;}
 .BVSecondaryRatingContainer:after {content: "."; height: 0; width: 0; visibility: hidden; display: block; clear: both;}
 	.BVSecondaryRatingContainer ._BVRatingLabelText {font-weight: bold; display: block;}
 	.BVSecondaryRatingContainer ._BVRatingStarsContainer, .BVSecondaryRatingContainer .BVRatingOutOfContainer {display: block; float: left;}
-		.BVSecondaryRatingContainer ._BVRatingStarsContainer ._BVRatingStarsFilledImage, .BVSecondaryRatingContainer ._BVRatingStarsContainer ._BVRatingStarsUnfilledImage {width: 167px !important;}
 	.BVSecondaryRatingContainer .BVRatingOutOfContainer {font-weight: bold;}
 		.BVSecondaryRatingContainer .BVRatingOutOfContainer .BVRatingSeparator, .BVSecondaryRatingContainer .BVRatingOutOfContainer ._BVRatingRange {display: none;}
 
@@ -68,7 +66,7 @@ behavior: url(includes/PIE-1.0.0/PIE.htc);
 	._BVQuickTakeContainer ._BVOverallRatingContainer {}
 		._BVQuickTakeContainer .BVOverallRatingContainer ._BVRatingStarsContainer {float: left;}
 			._BVQuickTakeContainer .BVOverallRatingContainer ._BVRatingStarsFilledImage, ._BVQuickTakeContainer .BVOverallRatingContainer ._BVRatingStarsUnfilledImage {width: 170px !important;}
-		._BVQuickTakeContainer .BVOverallRatingContainer .BVRatingOutOfContainer {color: #085EB9; float: left;}
+		._BVQuickTakeContainer .BVOverallRatingContainer .BVRatingOutOfContainer {font-weight: bold; line-height: 33px; font-size: 36px; color: #085EB9; float: left;}
 			._BVQuickTakeContainer .BVOverallRatingContainer .BVRatingSeparator, ._BVQuickTakeContainer .BVOverallRatingContainer ._BVRatingRange {display: none;}
 	._BVQuickTakeContainer ._BVOverallRatingContainer, ._BVQuickTakeContainer ._BVRecommendedContainerAverage {}
 	._BVQuickTakeContainer ._BVRecommendedContainerAverage {background: url(images/backgroundBuyAgain.gif) no-repeat; padding: 25px 0 25px 76px; position: absolute; left: 306px;}
@@ -89,7 +87,8 @@ behavior: url(includes/PIE-1.0.0/PIE.htc);
 	._BVOverallRatingContainer {}
 		.BVUGCHeader ._BVRatingLabelText {display: none;}
 		.BVUGCHeader .BVRatingOutOfContainer .BVRatingSeparator, .BVUGCHeader .BVRatingOutOfContainer ._BVRatingRange {display: none;}
-		.BVUGCHeader ._BVRatingStarsContainer {float: left;}
+		.BVUGCHeader ._BVRatingStarsContainer {width: 118px; float: left;}
+		.BVUGCHeader .BVRatingOutOfContainer {font-weight: bold; line-height: 28px;}
 	._BVTitleContainer {clear: left;}
 		h3._BVTitleText {font-size: 18px; margin: 0;}
 	._BVDateContainer {}
