updated image paths to use full path instead of relative uri

--- a/views/questions/display/questionContainer.html
+++ b/views/questions/display/questionContainer.html
@@ -3,7 +3,7 @@
 	<div class="_BVDateContainer"></div>
 	<div class="BVUserDataContainer">
 		<div class="BVAvatar">
-			<img src="images/noAvatar.gif" width="46" height="44" alt="" border="0" />
+			<img src="images/noAvatar.gif" onerror="this.onerror=null; this.src=pathResource('images/noAvatar.gif');" width="46" height="44" alt="" border="0" />
 		</div>
 		<div class="BVUserInfo">
 			<div class="_BVUserNicknameContainer"></div>
