--- a/views/review_comments/display/reviewCommentContainer.html
+++ b/views/review_comments/display/reviewCommentContainer.html
@@ -6,7 +6,7 @@
 	<div class="_BVBadgesContainer"></div>
 	<div class="BVUserDataContainer">
 		<div class="BVAvatar">
-			<img src="images/noAvatar.gif" width="40" height="41" alt="" border="0" />
+			<img src="images/noAvatar.gif" onerror="this.onerror=null; this.src=pathResource('images/noAvatar.gif');" width="40" height="41" alt="" border="0" />
 		</div>
 		<div class="BVUserInfo">
 			<div class="_BVUserNicknameContainer"></div>
