--- a/views/reviews/submission/submissionFormReviewCommentContainer.html
+++ b/views/reviews/submission/submissionFormReviewCommentContainer.html
@@ -13,7 +13,7 @@
 		</div>
 		<div class="BVSection BVSectionMediaContainer">
 			<div class="BVSectionHeader _BVSectionHeaderMediaContainer"></div>
-			<div class="BVField _BVPhotoUploadInputContainer"></div>
+			<div class="BVField _BVPhotoUploadContainer"></div>
 			<div class="BVField _BVVideoUploadInputContainer"></div>
 		</div>
 		<div class="BVSection BVSectionUserContainer">
