--- a/views/reviews/submission/submissionFormReviewContainer.html
+++ b/views/reviews/submission/submissionFormReviewContainer.html
@@ -20,7 +20,7 @@
 		</div>
 		<div class="BVSection BVSectionMediaContainer">
 			<div class="BVSectionHeader _BVSectionHeaderMediaContainer"></div>
-			<div class="BVField _BVPhotoUploadInputContainer"></div>
+			<div class="BVField _BVPhotoUploadContainer"></div>
 			<div class="BVField _BVVideoUploadInputContainer"></div>
 			<div class="BVField _BVVideoCaptionInputContainer"></div>
 		</div>
