--- a/views/universal/quicktake/quickTakeContainer.html
+++ b/views/universal/quicktake/quickTakeContainer.html
@@ -1,9 +1,11 @@
 <div class="_BVQuickTakeSummary">
+    <div class="_BVQuickTakeSummaryTitle BVTitle">Customer Rating</div>
 	<div class="_BVOverallRatingContainer"></div>
 	<div class="_BVRecommendedContainerAverage"></div>
     <div class="_BVFilters">
-        <div class="_BVFiltersTitle">Filter Reviews By:</div>
+        <div class="_BVFiltersTitle BVTitle">Filter Reviews By:</div>
         <div class="_BVFiltersContainer"></div>
+        <div class="_BVFiltersFilteringStatement">Use the Filters above to narrow which reviews are shown.</div>
     </div>
 	<div class="_BVButtonWriteReviewContainer"></div>
 	<div class="BVSortContainer">
